perf: WorkspaceIndex builds asynchronously to avoid UI freeze
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>